# android_sdk_packer

./: CMakeLists.txt
cmake/module/: android_sdk_packer_parse_version_revision.cmake  android_sdk_packer_unified_install.cmake
cmake/template/: Config.cmake.in
